[package]
authors = ["Paul Rouget <me@paulrouget.com>"]
build = "build.rs"
description = "A basic servo-based browser"
name = "servoshell"
version = "0.1.0"
[dependencies]
gdk = { version = "^0.6.0", optional = true }
glib = { version = "^0.3.1", optional = true }
glib-itc = { version = "^0.2.1", optional = true }
log = "0.3"
open = "1.1.1"
shared_library = { version = "^0.1.7", optional = true }

[target."cfg(all(not(feature = \"force-gtk\"), not(target_os = \"macos\")))".dependencies.glutin]
version = "0.9"

[dependencies.gtk]
optional = true
version = "^0.2.0"

[dependencies.epoxy]
version = "0.0.3"
optional = true

[dependencies.libservo]
git = "https://github.com/servo/servo"
rev = "bb998dbdf3"

[dependencies.tinyfiledialogs]
branch = "version_3"
git = "https://github.com/paulrouget/tinyfiledialogs-rs"

[features]
default = ["gtk/v3_16"]
force-glutin = []
force-gtk = ["epoxy", "gdk", "glib", "glib-itc", "gtk", "shared_library"]
[target."cfg(target_os = \"macos\")".dependencies]
cgl = "0.2"
cocoa = "^0.9.2"
core-foundation = "0.3"
core-graphics = "0.8"
libc = "0.2"
objc = "0.2"
[target."cfg(target_os = \"windows\")".dependencies]
gdi32-sys = "0.2"
user32-sys = "0.2"
winapi = "0.2"

[profile.release]
debug = true
